# CurrencySwapper

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yml
build-test/: ALL_BUILD.vcxproj  CMakeCache.txt  CurrencySwapper.sln  CurrencySwapper.vcxproj  CurrencySwapper.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build-test/.cmake/api/v1/reply/: cache-v2-f29f9e556344030dc791.json  cmakeFiles-v1-73020106b5c2368b1d13.json  codemodel-v2-efd0aaa1c96c2f1138a8.json  directory-CommonLibSSE-Debug-80812f6a659c385dc9a8.json  directory-CommonLibSSE-Release-94903a3c682f97b0c2a6.json  index-2024-08-23T15-06-03-0449.json  target-ALL_BUILD-Release-59ac78773e8d58e2d11f.json  target-ALL_BUILD-Release-ff193071c1ddd39d3fe3.json  target-CommonLibSSE-Debug-ff1e3bc78a7f160f792c.json  target-CommonLibSSE-Release-689a7eb7a5ac23496ef7.json  target-CurrencySwapper-Debug-6928b66ed5e44a295ecd.json  target-CurrencySwapper-Release-2435e0d8631c49f77ae9.json  target-ZERO_CHECK-Release-971cf0da7289bd502ea1.json  toolchains-v1-c25367dc0cbb063662fd.json
build-test/CommonLibSSE/: ALL_BUILD.vcxproj  CommonLibSSE.sln  CommonLibSSE.vcxproj  CommonLibSSE.vcxproj.filters  CommonLibSSEConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
cmake/: headerlist.cmake  sourcelist.cmake
cmake/Scripts/: CMake-Copy-Artifacts.cmake  CMake-Copy-Scripts.cmake
cmake/ports/clib-util/: portfile.cmake  vcpkg.json
data/SKSE/CustomConsole/: currencySwapper.yaml
data/SKSE/Plugins/: CurrencySwapper.ini
data/Scripts/: SEA_BarterFunctions.pex
data/Source/Scripts/: SEA_BarterFunctions.psc
src/: hooks.cpp  hooks.h  main.cpp  papyrus.cpp  papyrus.h  serde.cpp  serde.h
src/Common/: PCH.h
src/CurrencyManager/: CurrencyManager.cpp  CurrencyManager.h
src/Export/: SKSEPlugin.cpp
src/Hooks/: Hooks.cpp
src/Hooks/Barter/: BarterHooks.cpp  BarterHooks.h
src/Hooks/Training/: TrainingHooks.cpp  TrainingHooks.h
src/Papyrus/: Papyrus.cpp  Papyrus.h
src/RE/: Misc.h  Offset.h
src/Serialization/: Serde.cpp  Serde.h
src/Settings/INI/: INISettings.cpp  INISettings.h
